--- a/Incidencia Delictiva.ipynb
+++ b/Incidencia Delictiva.ipynb
@@ -231,7 +231,7 @@
     }
    ],
    "source": [
-    "df_delitos_2015_2020 = pd.read_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\Municipal-Delitos-2015-2022_mar2022.csv', sep=',', encoding='latin-1')\n",
+    "df_delitos_2015_2020 = pd.read_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\Municipal-Delitos-2015-2022_mar2022.csv', sep=',', encoding='latin-1')\n",
     "df_delitos_2015_2020.head()"
    ]
   },
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame.from_dict(datos_violencia[\"datos_violencia\"]\n",
-    "df.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\datos_violencia_fecha.csv')  "
+    "df.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\datos_violencia_fecha.csv')  "
    ]
   },
   {
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv (r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\datos_violencia_fecha.csv')\n",
+    "df = pd.read_csv (r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\datos_violencia_fecha.csv')\n",
     "df_incidencia_delictiva = df"
    ]
   },
@@ -725,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\datos_violencia_fecha_date_time.csv')  "
+    "temp.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\datos_violencia_fecha_date_time.csv')  "
    ]
   },
   {
@@ -833,7 +833,7 @@
     "                   'bien_juridico':data_bien_juridico})\n",
     "data_bien_juridico.set_index('id', inplace = True)\n",
     "\n",
-    "data_bien_juridico.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\bien_juridico.csv',encoding='latin-1')  \n",
+    "data_bien_juridico.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\bien_juridico.csv',encoding='latin-1')  \n",
     "data_bien_juridico"
    ]
   },
@@ -1104,7 +1104,7 @@
     "                   'tipo_delito':data_tipo_delito})\n",
     "data_tipo_delito.set_index('id', inplace = True)\n",
     "\n",
-    "data_tipo_delito.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\tipo_delito.csv',encoding='latin-1')  \n",
+    "data_tipo_delito.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\tipo_delito.csv',encoding='latin-1')  \n",
     "data_tipo_delito"
    ]
   },
@@ -1450,7 +1450,7 @@
     "                   'sub_tipo_delito':data_sub_tipo_delito})\n",
     "data_sub_tipo_delito.set_index('id', inplace = True)\n",
     "\n",
-    "data_sub_tipo_delito.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\sub_tipo_delito.csv',encoding='latin-1')  \n",
+    "data_sub_tipo_delito.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\sub_tipo_delito.csv',encoding='latin-1')  \n",
     "data_sub_tipo_delito"
    ]
   },
@@ -1816,7 +1816,7 @@
     "                   'modalidad':data_modalidad})\n",
     "data_modalidad.set_index('id', inplace = True)\n",
     "\n",
-    "data_modalidad.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\modalidad.csv',encoding='latin-1')  \n",
+    "data_modalidad.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\modalidad.csv',encoding='latin-1')  \n",
     "data_modalidad"
    ]
   },
@@ -2044,7 +2044,7 @@
     "data_estado.columns = ['id','estado']\n",
     "data_estado.set_index('id', inplace = True)\n",
     "\n",
-    "data_estado.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\estados.csv',encoding='latin-1')  \n",
+    "data_estado.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\estados.csv',encoding='latin-1')  \n",
     "data_estado"
    ]
   },
@@ -2183,7 +2183,7 @@
     "data_municipio.columns = ['id','municipio','id_estado']\n",
     "data_municipio.set_index('id', inplace = True)\n",
     "\n",
-    "data_municipio.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\municipios.csv',encoding='latin-1')  \n",
+    "data_municipio.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\municipios.csv',encoding='latin-1')  \n",
     "data_municipio"
    ]
   },
@@ -2924,7 +2924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_IDT_temp.to_csv(r'C:\\Users\\isai_\\Downloads\\Municipal-Delitos-2015-2022_mar2022\\Inicidencia-Delictiva\\Incidencia_Delictiva_Full.csv',encoding='latin-1')  \n"
+    "df_IDT_temp.to_csv(r'C:\\Users\\isai_\\Documents\\DataScience\\Modulo-3-Python\\Dataset-Proyecto\\Inicidencia-Delictiva\\Incidencia_Delictiva_Full.csv',encoding='latin-1')  \n"
    ]
   },
   {
